fix overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,3 +87,11 @@ section {
   max-width: 1100px;
   margin: 0 auto;
 }
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
